package ar.edu.utn.frba.dds.clienteGrafico.dtos.input.Hechos;

public enum EstadoHecho {
    PENDIENTE,
    ACEPTADO,
    RECHAZADO,
    SUGERENCIA
}
