package ar.edu.utn.frba.dds.fuenteDinamica.models.entities;

public enum EstadoSolicitudEliminacion {
    ACEPTADA,
    RECHAZADA,
    PENDIENTE
}
