package ar.edu.utn.frba.dds.fuenteDinamica.models.entities;

public interface IContenidoMultimedia {
    public String getContenido();
}
// Strategy por posibles distintos tipos de contenido