package ar.edu.utn.frba.dds.Hechos;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Ubicacion {
    private Double latitud;
    private Double longitud;

}
